[gd_scene load_steps=9 format=3 uid="uid://b0n3tpjf4sbp"]

[ext_resource type="Theme" uid="uid://cbdqhutecvme1" path="res://popup_theme.tres" id="1_vd1ea"]
[ext_resource type="Script" path="res://scenes/menus/panels/section_panel.gd" id="2_7m8pw"]
[ext_resource type="PackedScene" uid="uid://c6p08s4x6uwo4" path="res://scenes/common/game_button.tscn" id="2_8wy2t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_811h5"]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_right = 10.0
content_margin_bottom = 5.0
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wsi1i"]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_right = 10.0
content_margin_bottom = 5.0
bg_color = Color(0.431373, 0.643137, 0.654902, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lkv0w"]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_right = 10.0
content_margin_bottom = 5.0
bg_color = Color(0, 0, 0, 0.6)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hrep5"]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_right = 10.0
content_margin_bottom = 5.0
bg_color = Color(0.298039, 0.329412, 0.313726, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_672nq"]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_right = 10.0
content_margin_bottom = 5.0
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="SectionPanel" type="PanelContainer"]
z_index = 2
y_sort_enabled = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vd1ea")
script = ExtResource("2_7m8pw")
section_name = "Sample Name"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="ContentContainer" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ContentContainer"]
layout_mode = 2

[node name="PanelName" type="Label" parent="MarginContainer/ContentContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Sample Name"

[node name="CloseButton" parent="MarginContainer/ContentContainer/HBoxContainer" instance=ExtResource("2_8wy2t")]
layout_mode = 2
size_flags_horizontal = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_811h5")
theme_override_styles/hover = SubResource("StyleBoxFlat_wsi1i")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lkv0w")
theme_override_styles/disabled = SubResource("StyleBoxFlat_hrep5")
theme_override_styles/focus = SubResource("StyleBoxFlat_672nq")
text = "Close"
_size = "nm"
_text = "Close"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/ContentContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[connection signal="pressed" from="MarginContainer/ContentContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
